--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           set -eux
           sudo apt-get update
-          sudo apt-get install -y build-essential bc flex bison libelf-dev pkg-config pahole gcc clang lld
+          sudo apt-get install -y build-essential bc flex bison libelf-dev pkg-config pahole gcc clang lld gcc-12
 
       - name: Install specific kernel headers (${{ env.KVER }})
         run: |
